deployment/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s-shop-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
