deployment/k8s/20-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: s-shop-system
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: api
  ports:
    - name: web
      port: 8000
      targetPort: 8000
